<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/fondo_inicio"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_app"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:paddingHorizontal="25dp">

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo Electrónico"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:gravity="center" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:backgroundTint="@color/login"/>

        <TextView
            android:id="@+id/tvPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta"
            android:textColor="@color/pregunta"
            android:layout_marginTop="20dp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="18dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="o"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="8dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnCrearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva_cuenta"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/registro"/>

    </LinearLayout>

</LinearLayout>
